--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<link th:href="@{'css/bootstrap.css'}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" th:src="@{'js/bootstrap.bundle.js'}">
