--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="head.html">
     <meta charset="UTF-8">
     <title>Student List</title>
 </head>
 <body>
-HELLO FURIA ACADEMY
+<div class="container">
+    <div class="row" th:insert="navbar.html">
+    </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Surname</th>
+                        <th>Exam</th>
+                        <th>Mark</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="stud : ${student}">
+                        <td th:text="${stud.name}"></td>
+                        <td th:text="${stud.surname}"></td>
+                        <td th:text="${stud.exam}"></td>
+                        <td th:text="${stud.mark}"></td>
+                        <td>
+                            <button class="btn btn-outline-primary">Details</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
